# mt5_halftrend

./: .gitignore  LineNotify.py  README.md  config.py  config_sample.ini  halftrend_x.py  pyproject.toml  stupid_halftrend_mt5.py  stupid_share.py
